# ServiceX_Code_Generator_lib

./: .flake8  .gitignore  README.md  pyproject.toml  setup.py  transformer_capabilities.json
.github/workflows/: ci.yaml  pypi.yaml
servicex_codegen/: __init__.py  code_generator.py  post_operation.py
tests/: test_code_generator.py  test_post_operation.py
