[tool.poetry]
name = "servicex-code-gen-lib"
version = "1.1.0-alpha.1"
description = "Library for creating ServiceX Code Generators"
authors = ["Ben Galewsky <bengal1@illinois.edu>"]
readme = "README.md"
packages = [{include = "servicex_codegen"}]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.2.2"
Flask-RESTful = "^0.3.9"
Flask-WTF = "^1.0.1"
itsdangerous = "^2.1.2"
Werkzeug = "^2.2.2"
Jinja2 = "^3.1.2"
pytest = "^7.1.3"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
coverage = "^6.5.0"
flake8 = "^5.0.4"
codecov = "^2.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
