[tool.poetry]
name = "servicex-code-gen-lib"
version = "1.1.0"
description = "Library for creating ServiceX Code Generators"
authors = ["Ben Galewsky <bengal1@illinois.edu>"]
readme = "README.md"
packages = [{include = "servicex_codegen"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.3"
Flask-RESTful = "^0.3.9"
Flask-WTF = "^1.0.1"
itsdangerous = "^2.1.2"
Werkzeug = "^3.0.4"
Jinja2 = "^3.1.2"
requests-toolbelt = "^0.10.1"
urllib3 = "1.26.18"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
codecov = "^2.1.12"
flake8 = "^5.0.4"
coverage = "^6.5.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
